--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
  
     <link rel="preload"  as="image" href="/percent.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>CloudCart</title>
   </head>
   <body>
     <div id="root"></div>
