pixed pagination bug, added meta tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
  
     <link rel="preload"  as="image" href="/percent.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Discover quality products wheather it be electronics, groceries or cloths"/>
+    <meta name="keywords" content="ecomerce, online, shopping, fashion, portfolio"/>
+    <meta name="author" content="Me"/>
+        <link rel="dns-prefetch" href="//res.cloudinary.com" />
     <title>CloudCart</title>
   </head>
   <body>
